# aurarouter-gemini

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/aurarouter_gemini/: __init__.py  __main__.py  models.py  provider.py  server.py
tests/: conftest.py  test_provider.py  test_server.py
